--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -25,7 +25,7 @@ jobs:
         pip install -r BrainBusterSite/requirements.txt
     - name: Run Tests
       run: |
-        python BrainBusterSite/manage.py test
+        python BrainBusterSite/manage.py test BrainBusterApp/tests.py
 
     
   build-artifact:
