--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -31,9 +31,9 @@ jobs:
     runs-on: ubuntu-latest
     needs: unit-test
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - name: Merge branches
         run: |
-          git checkout main
-          git merge test
-          git push
+          git fetch origin main
+          git merge
+          git push origin main
