--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,9 @@ __pycache__/
 # C extensions
 *.so
 
+#GitHub Workflows
+.github/workflows/build-test.yml
+
 # Distribution / packaging
 .Python
 build/
