--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -1,4 +1,4 @@
-name: CI
+name: CI/CD
 
 on:
   push:
@@ -28,12 +28,8 @@ jobs:
         python BrainBusterSite/manage.py test BrainBusterApp.tests
         
   deployment:
-    runs-on: ubuntu-latest
-    needs: unit-test
-    steps:
-      - uses: actions/checkout@v3
-      - name: Merge branches
-        run: |
-          git fetch origin main
-          git merge
-          git push origin main
+    if: success() && github.ref == 'refs/heads/test'
+    uses: ad-m/github-push-action@master
+    with:
+      github_token: ${{ secrets.GIT_TOKEN }}
+      branch: main
