--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -27,9 +27,13 @@ jobs:
       run: |
         python BrainBusterSite/manage.py test BrainBusterApp.tests
         
-  deployment:
-    if: success() && github.ref == 'refs/heads/test'
-    uses: ad-m/github-push-action@master
-    with:
-      github_token: ${{ secrets.GIT_TOKEN }}
-      branch: main
+  deploy:
+    runs-on: ubuntu-latest
+    needs: unit-test
+    steps:
+      - name: Automatisches Pushen nach Main bei Erfolg
+        if: success() && github.ref == 'refs/heads/test'
+        uses: ./.github/workflows/build-test.yml@v1  
+        with:
+          github_token: ${{ secrets.GIT_TOKEN }}
+          branch: main
