--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -1,4 +1,4 @@
-name: CI/CD
+name: CI
 
 on:
   push:
@@ -26,14 +26,3 @@ jobs:
     - name: Run Tests
       run: |
         python BrainBusterSite/manage.py test BrainBusterApp.tests
-        
-  deploy:
-    runs-on: ubuntu-latest
-    needs: unit-test
-    steps:
-      - name: Automatisches Pushen nach Main bei Erfolg
-        if: success() && github.ref == 'refs/heads/test'
-        uses: BrainBuster/.github/workflows/build.test.yml@v1
-        with:
-          github_token: ${{ secrets.GIT_TOKEN }}
-          branch: main
