--- a/.github/workflows/pushToTest.yml
+++ b/.github/workflows/pushToTest.yml
@@ -15,10 +15,7 @@ jobs:
     - name: Überprüfe Änderungen zwischen development und test
       id: check_changes
       run: |
-        git fetch origin development:test-changes
-        git diff --quiet HEAD test-changes || echo "Changes found"
-        git branch -D test-changes
-      continue-on-error: true
+        git diff origin/development origin/test || echo "Changes found"
 
   push-to-test:
     needs: check-for-changes
