--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -1,16 +1,20 @@
-name: default
+name: Run tests
   
 on: 
   push:
     branches:
       - "tyrone"
-  pull_request:
-    branches:
-    - "tyrone"
 
 jobs:
-  test:
+  super-linter:
+    name: Lint code
     runs-on: ubuntu-latest
-
     steps:
-      - run: echo "hello world"
+      - name: Checkout code
+        uses: actions/checkout@v3
+        
+      - name: Run Super-Linter
+        uses: github/super-linter@v3
+        env:
+          DEFAULT_BRANCH: main
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN}}
