--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -6,12 +6,12 @@ on:
       - "tyrone"
 
 jobs:
-  run-tests:
-    name: Unit tests
+  tests:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
 
       - name: Run Test
-        run: python manage.py test BrainBusterApp
+        run: python BrainBusterSite/manage.py test BrainBusterApp
