--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r ./web/requirements.txt
+          pip install -r ./BrainBusterSite/requirements.txt
 
       - name: Run Test
-        run: python BrainBusterSite/manage.py test BrainBusterApp
+        run: python ./BrainBusterSite/manage.py test BrainBusterApp
