add stylelint to workflow and fix stylelint css issues

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -21,3 +21,9 @@ jobs:
 
       - name: Run Test
         run: python ./BrainBusterSite/manage.py test BrainBusterApp
+
+      - name: Install Dependencies
+        run: npm ci
+
+      - name: Stylelinet
+        run: npx stylelint "**/*.css"
