--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -11,9 +11,6 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
-        with:
-          python-version: "3.10"
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
@@ -21,7 +18,10 @@ jobs:
 
       - name: Run Test
         run: python ./BrainBusterSite/manage.py test BrainBusterApp
+  lint:
+    runs-on: ubuntu-latest
 
+    steps:
       - name: Install Dependencies
         run: npm install
 
